force-app/main/default/classes/Controllers Apex/objects/Student_Detail__c/fields/Colleger_Master__c.field-meta.xml
<CustomField>
    <fullName>Colleger_Master__c</fullName>
    <label>Colleger Master</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Student Details</relationshipLabel>
    <relationshipName>Student_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>