force-app/main/default/classes/Controllers Apex/objects/Student_Detail__c/fields/Contact_Member__c.field-meta.xml
<CustomField>
    <fullName>Contact_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Details</relationshipLabel>
    <relationshipName>Student_Details</relationshipName>
    <type>Lookup</type>
</CustomField>