force-app/main/default/classes/Controllers Apex/objects/Student_Detail__c/fields/University_Master__c.field-meta.xml
<CustomField>
    <fullName>University_Master__c</fullName>
    <label>University Master</label>
    <referenceTo>Univercity__c</referenceTo>
    <relationshipLabel>Student Details</relationshipLabel>
    <relationshipName>Student_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>